# python-bidi

./: .gitignore  .readthedocs.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  Cargo.toml  HISTORY.rst  MANIFEST.in  Makefile  README.rst  TODO  TODO.rst  buildout.cfg  noxfile.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: CI.yml
bidi/: __init__.py  algorithm.py  definitions.py  helpers.py  mirror.py
docs/: INSTALL.rst  bidi.rst  conf.py  index.rst  installation.rst  modules.rst  usage.rst
src/: lib.rs
src/bidi/: __init__.py  algorithm.py  chartypes.py  levelruns.py  mirror.py  paragraph.py  runs.py  tests.py
tests/: test_bidi.py  test_free_threaded.py  test_python_bidi.py  test_rust_bidi.py
