[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "python-bidi"
version = "0.6.0"
readme = "README.rst"
keywords = ["bidi", "unicode", "layout"]
description = "Python Bidi layout wrapping the Rust crate unicode-bidi"
authors = [{ name = "Meir Kriheli", email = "mkriheli@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
    "Topic :: Text Processing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/MeirKriheli/python-bidi"
Repository = "https://github.com/MeirKriheli/python-bidi"

[project.scripts]
pybidi = "bidi:main"

[project.optional-dependencies]
dev = ["pytest"]
